# rust_autocomplete_api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: stats
src/: main.rs
