[package]
name = "rust_autocomplete_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12.0"
actix-http = "3.11.2"
csv = "1.3.1"
flate2 = "1.1.5"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
