[package]
name = "rust_autocomplete_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.12.1"
csv = "1.4.0"
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
